--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Cats vs Dogs: the Definitive Guide</h1>
     <p>Welcome to the ultimate showdown between cats and dogs. May the best one win!</p>
+    <img style="float: left" src="images/cute-kitten.jpeg">
     <div class="cats">
       <p>Here's why cats are great. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <p>Find out more about cats <a href="http://www.example.com/cats.html">here</a>.</p>
